# OpenStudio

./: CMakeLists.txt
dependencies/: swig_ruby_patch.patch
dependencies/Boost/: transform_width.diff  xcode_51a.diff  xcode_51b.diff
dependencies/GoogleTest/: CMakeLists.txt
dependencies/ruby/ruby-2.0.0-p353/: Makefile.sub
developer/cmake/: CMakeLists.txt  test.cpp  tpl.cmake
developer/msvc/: README.md
developer/msvc/Visualizers/: boost.natstepfilter  boost.natvis  boost_Containers.natvis  boost_DateTime.natvis  boost_Geometry.natvis  boost_IntrusiveContainers.natvis  boost_PointerContainerLibrary.natvis  boost_SmartPointers.natvis  boost_Unordered.natvis  boost_Variant.natvis  boost_uBLAS.natvis  qt5.natvis
openstudiocore/: CMakeLists.txt
openstudiocore/CMake/: FindEnergyPlus.cmake  FindMongoDB.cmake
openstudiocore/resources/energyplus/: ProposedEnergy+.idd
openstudiocore/resources/model/: OpenStudio.idd
openstudiocore/src/afn/: AddAfnToOsm.cpp  AfnAPI.hpp  CMakeLists.txt  ForwardTranslator.cpp  ForwardTranslator.hpp  ReverseTranslator.cpp  ReverseTranslator.hpp
openstudiocore/src/airflow/: AirflowAPI.hpp  CMakeLists.txt  NetworkBuilder.cpp  NetworkBuilder.hpp  SpaceLinker.cpp  SpaceLinker.hpp  WindPressure.cpp  WindPressure.hpp
openstudiocore/src/airflow/afn/: AddAfnToOsm.cpp  CMakeLists.txt  ForwardTranslator.cpp  ForwardTranslator.hpp
openstudiocore/src/airflow/afn/test/: AfnFixture.cpp  AfnFixture.hpp  ForwardTranslator_GTest.cpp  ReverseTranslator_GTest.cpp
openstudiocore/src/airflow/test/: AirflowFixture.cpp  AirflowFixture.hpp  NetworkBuilder_GTest.cpp
openstudiocore/src/analysis/: DiscreteVariable.hpp  DiscreteVariable_Impl.hpp
openstudiocore/src/analysisdriver/: AnalysisDriverEnums.hpp  CloudAnalysisDriver.cpp  CloudAnalysisDriver.hpp  CloudAnalysisDriver_Impl.hpp
openstudiocore/src/contam/: CMakeLists.txt  ContamAPI.hpp  ForwardTranslator.cpp  ForwardTranslator.hpp  PrjAirflowElements.cpp  PrjAirflowElements.hpp  PrjAirflowElementsImpl.cpp  PrjAirflowElementsImpl.hpp  PrjDefines.hpp  PrjModel.cpp  PrjModel.hpp  PrjModelImpl.cpp  PrjModelImpl.hpp  PrjObjects.cpp  PrjObjects.hpp  PrjObjectsImpl.cpp  PrjObjectsImpl.hpp  PrjSubobjects.cpp  PrjSubobjects.hpp  PrjSubobjectsImpl.cpp  PrjSubobjectsImpl.hpp  ReverseTranslator.cpp  ReverseTranslator.hpp  SimFile.cpp  SimFile.hpp
openstudiocore/src/energyplus/: CMakeLists.txt  ForwardTranslator.cpp  ForwardTranslator.hpp
(+437 files in other folders)
